[package]
name = "rpgm-asset-decrypter-lib"
version = "2.1.1"
authors = ["savannstm <savannstm@gmail.com>"]
edition = "2018"
rust-version = "1.56.0"
description = "A library for decrypting/encrypting RPG Maker MV/MZ audio and image assets."
documentation = "https://docs.rs/rpgm-asset-decrypter-lib"
readme = "README.md"
repository = "https://github.com/savannstm/rpgm-asset-decrypter-lib"
license-file = "LICENSE.md"

[dependencies]
serde = { version = "1.0.228", optional = true }
thiserror = "1.0.65"

[features]
serde = ["dep:serde"]